# mia

./: .gitignore  Cargo.toml  README.md
contest1/problem1/: Cargo.toml
contest1/problem1/src/: main.rs
contest1/problem2/: Cargo.toml
contest1/problem2/src/: main.rs
contest_1/: Cargo.toml  main.c
contest_1/problem_a/: Cargo.toml  README.md
contest_1/problem_b/: Cargo.toml  README.md
contest_1/problem_b/src/: main.rs
contest_1/problem_c/: Cargo.toml  README.md
contest_1/src/: main.rs
contest_10/problem_a/: Cargo.toml
contest_11/problem_a/: Cargo.toml
contest_11/problem_b/: Cargo.toml
contest_12/problem_a/: Cargo.toml
contest_12/problem_b/: Cargo.toml
contest_13/problem_a/: Cargo.toml
contest_13/problem_c/: Cargo.toml
contest_14/problem_a/: Cargo.toml
contest_14/problem_b/: Cargo.toml
contest_14/problem_c/: Cargo.toml
contest_15/problem_a/: Cargo.toml
contest_2/problem_a/: Cargo.toml  README.md
contest_2/problem_b/: Cargo.toml  README.md
contest_2/problem_c/: Cargo.toml  README.md
contest_2/problem_d/: Cargo.toml  README.md
contest_2/problem_e/: Cargo.toml  README.md
contest_3/problem_a/: Cargo.toml
contest_3/problem_b/: Cargo.toml
contest_4/problem_a/: Cargo.toml
contest_4/problem_b/: Cargo.toml
contest_5/problem_a/: Cargo.toml
contest_6/problem_a/: Cargo.toml
contest_7/problem_a/: Cargo.toml
contest_7/problem_c/: Cargo.toml
contest_8/problem_a/: Cargo.toml
contest_8/problem_b/: Cargo.toml
contest_9/problem_a/: Cargo.toml
contest_9/problem_b/: Cargo.toml
scanner/: Cargo.toml
scanner/src/: lib.rs
(+29 files in other folders)
