[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

[workspace]
members = [
    "contest_1/problem_a", "contest_1/problem_b", "contest_1/problem_c",
    "contest_2/problem_a", "contest_2/problem_b", "contest_2/problem_c", "contest_2/problem_d",
    "contest_2/problem_e",
    "contest_3/problem_a", "contest_3/problem_b",
    "contest_4/problem_a", "contest_4/problem_b",
    "contest_5/problem_a",
    "contest_6/problem_a",
    "contest_7/problem_a", "contest_7/problem_c",
    "contest_8/problem_a", "contest_8/problem_b",
    "contest_9/problem_a", "contest_9/problem_b",
    "contest_11/problem_a", "contest_11/problem_b",
]
